# lol

./: .gitignore  build_and_run.bat  dump_snippets.txt  logcat.bat  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/dobbyproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Resource.cpp  SharedGameData.h  native-lib.cpp  start.cpp  start.h
app/src/main/cpp/AndroidSurfaceImgui/: CMakeLists.txt
app/src/main/cpp/AndroidSurfaceImgui/includes/: AImGui.h
app/src/main/cpp/AndroidSurfaceImgui/src/common/: AImGui.cc  ATouchEvent.cc
app/src/main/cpp/Dobby/: CMakeLists.txt
app/src/main/cpp/Dobby/builtin-plugin/SymbolResolver/elf/: dobby_symbol_resolver.cc
app/src/main/cpp/Draw/: Draw.cpp  Draw.h
app/src/main/cpp/File/: file.cpp  file.h
app/src/main/cpp/Injector/: Injector.cpp  Injector.h  injector_main.cpp
app/src/main/cpp/Log/: log.cpp  log.h
app/src/main/cpp/Symbol/: Symbol.cpp  Symbol.h
app/src/main/cpp/UnityApi/: unityapi.cpp  unityapi.h
app/src/main/cpp/UnityStruct/: UnityInfo.cpp  UnityInfo.h
app/src/main/cpp/UnityStruct/unity2018-4-16f1/: UnityStructInfo.h
app/src/main/cpp/il2cppGenerated/: il2cpp_structs.h
app/src/main/cpp/il2cppHeader/: il2cppHeader.cpp  il2cppHeader.h
app/src/main/cpp/interface/: interface.cpp  interface.h
app/src/main/cpp/li2cpp Dumper/: li2cppdumper.cpp  li2cppdumper.h
app/src/main/cpp/li2cppDumper/: li2cppdumper.cpp  li2cppdumper.h
app/src/main/cpp/lol/: LolHeader.h  LolOffset.h  SkinChanger.cpp  SkinChanger.h  lolm.cpp  lolm.h
app/src/main/java/com/example/dobbyproject/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/dobbyproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
